[package]
name = "epilang"
version = "0.1.0"
authors = ["epieffe.eth <ferrariepifanio@gmail.com>"]
edition = "2018"


[build-dependencies]
lalrpop = { version = "0.20", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.20"
thiserror = "1.0"
rustyline = "10.0.0"

[dev-dependencies]
rstest = "0.15.0"
